# client-sdk-rs

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rustdoc.yml
client_sdk/: all.html  index.html  macro.perms!.html  macro.perms.html  sidebar-items.js  struct.Snowflake.html
client_sdk/api/: index.html  sidebar-items.js  struct.CommandFlags.html  struct.MissingItemError.html  struct.RateLimit.html  trait.Command.html  trait.CommandBody.html  trait.CommandResult.html
client_sdk/api/asset/: enum.AssetQuery.html  index.html  sidebar-items.js
client_sdk/api/command/: struct.CommandFlags.html  struct.MissingItemError.html  struct.RateLimit.html  trait.Command.html  trait.CommandBody.html  trait.CommandResult.html
client_sdk/api/commands/: index.html  sidebar-items.js
client_sdk/api/error/: enum.ApiErrorCode.html  index.html  sidebar-items.js  struct.ApiError.html  struct.ApiErrorResolver.html  struct.ArchivedApiError.html  struct.ArchivedApiErrorCode.html
client_sdk/api/gateway/: index.html  sidebar-items.js  struct.GatewayQueryParams.html
client_sdk/client/: enum.ClientError.html  index.html  sidebar-items.js  struct.Client.html
client_sdk/client/error/: enum.ClientError.html
client_sdk/driver/: enum.DriverError.html  enum.Encoding.html  index.html  sidebar-items.js  struct.Driver.html
client_sdk/driver/error/: enum.DriverError.html
client_sdk/framework/: index.html  sidebar-items.js
client_sdk/framework/md/: index.html
client_sdk/framework/standard/: enum.StandardError.html  index.html  sidebar-items.js  struct.Standard.html  struct.StandardContext.html  trait.StandardErrorExt.html  type.SimpleStandard.html  type.StandardDynamicHandler.html
client_sdk/framework_utils/: index.html
client_sdk/framework_utils/args/: index.html  sidebar-items.js  struct.Argument.html  struct.ArgumentSplitter.html  type.ArgumentSplitterOwned.html
client_sdk/gateway/: enum.GatewayError.html  enum.GatewayErrorCode.html  index.html  sidebar-items.js  struct.GatewayConnection.html  struct.GatewayConnectionControl.html  struct.GatewaySocket.html
client_sdk/gateway/conn/: struct.GatewayConnection.html  struct.GatewayConnectionControl.html
client_sdk/gateway/error/: enum.GatewayError.html  enum.GatewayErrorCode.html
client_sdk/gateway/socket/: struct.GatewaySocket.html
client_sdk/models/: enum.ArchivedCursor.html  enum.Cursor.html  enum.CursorResolver.html  index.html  sidebar-items.js  struct.Arc.html  struct.FxRandomState2.html  struct.SmolStr.html  struct.Snowflake.html  struct.ThinVec.html  struct.Timestamp.html  type.EncryptedSnowflake.html
client_sdk/models/aliases/: index.html  sidebar-items.js  type.ArchivedEmoteId.html  type.ArchivedFileId.html  type.ArchivedFolderId.html  type.ArchivedInviteId.html  type.ArchivedMessageId.html  type.ArchivedPartyId.html  type.ArchivedRoleId.html  type.ArchivedRoomId.html  type.ArchivedThreadId.html  type.ArchivedUserId.html  type.EmoteId.html  type.FileId.html  type.FolderId.html  type.InviteId.html  type.MessageId.html  type.PartyId.html  type.RoleId.html  type.RoomId.html  type.ThreadId.html  type.UserId.html
client_sdk/models/asset/: index.html  sidebar-items.js  struct.ArchivedAssetFlags.html  struct.AssetFlags.html
client_sdk/models/auth/: enum.ArchivedAuthToken.html  enum.AuthToken.html  enum.AuthTokenResolver.html  index.html  sidebar-items.js  struct.InvalidAuthToken.html  type.BearerToken.html  type.BotToken.html
client_sdk/models/config/: index.html  sidebar-items.js  struct.ArchivedServerConfig.html  struct.ArchivedServerLimits.html  struct.ServerConfig.html  struct.ServerConfigResolver.html  struct.ServerLimits.html  struct.ServerLimitsResolver.html  type.HCaptchaSiteKey.html
client_sdk/models/embed/: enum.ArchivedEmbed.html  enum.Embed.html  enum.EmbedResolver.html  enum.EmbedType.html  index.html  sidebar-items.js  struct.BoxedEmbedMedia.html  struct.Embed.html  struct.EmbedAuthor.html  struct.EmbedField.html  struct.EmbedFlags.html  struct.EmbedFooter.html  struct.EmbedMedia.html  struct.EmbedProvider.html  struct.EmbedV1.html  type.EmbedWithExpire.html  type.UrlSignature.html
client_sdk/models/emote/: enum.ArchivedEmote.html  enum.Emote.html  enum.EmoteResolver.html  index.html  sidebar-items.js  struct.ArchivedCustomEmote.html  struct.ArchivedEmoteFlags.html  struct.CustomEmote.html  struct.CustomEmoteResolver.html  struct.EmoteFlags.html
client_sdk/models/file/: index.html  sidebar-items.js  struct.ArchivedFile.html  struct.File.html  struct.FileResolver.html  struct.FileUpload.html
client_sdk/models/gateway/: index.html  (+3 more)
client_sdk/util/: index.html  sidebar-items.js
common/: Cargo.toml  README.md
common/src/: db.rs  fixed.rs  lib.rs  schema.rs  ser.rs
examples/: generate_ts_sdk.rs  schema.rs
implementors/futures_sink/: trait.Sink.js
implementors/schemars/: trait.JsonSchema.js
search.desc/client_sdk/: client_sdk-desc-0-.js  client_sdk-desc-1-.js
src/: lib.rs
src/api/: asset.rs  command.rs  error.rs  gateway.rs  mod.rs
src/client/: error.rs  file.rs  mod.rs
src/client_sdk/: lib.rs.html
src/driver/: error.rs  mod.rs
src/framework/: mod.rs
src/framework_utils/: args.rs
src/gateway/: conn.rs  error.rs  mod.rs  socket.rs
src/models/: asset.rs  auth.rs  config.rs  embed.rs  emote.rs  file.rs  gateway.rs  invite.rs  message.rs  mod.rs  nullable.rs  party.rs  permission.rs  prefs.rs  presence.rs  role.rs  room.rs  session.rs  sf.rs  stats.rs  thread.rs  user.rs
src/util/: fixed.rs  flags.rs  prefs.rs  schema.rs  sql.rs
trait.impl/bytecheck/: trait.CheckBytes.js
trait.impl/futures_sink/: trait.Sink.js
trait.impl/postgres_types/: trait.FromSql.js  trait.ToSql.js
trait.impl/rkyv/: trait.Archive.js  trait.Deserialize.js  trait.Serialize.js
ts-bindgen/: Cargo.toml  README.md
ts-bindgen/src/: lib.rs  registry.rs  ty.rs
ts-bindgen/ts-bindgen-macros/: Cargo.toml
type.impl/client_sdk/: struct.Snowflake.js
type.impl/std/: primitive.tuple.js
(+981 files in other folders)
