[package]
name = "client-sdk"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Lantern-chat/client-sdk-rs"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timestamp = { package = "iso8061-timestamp", version = "0.1" }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_shims = { version = "0.2", features = ["bitflags"] }
bitflags = "1.2"
serde_repr = "0.1"
itoa = "1"
time = { version = "0.3", features = ["macros"] }
smol_str = { version = "0.1", features = ["serde"] }
arrayvec = { version = "0.7.1", features = ["serde"] }
hashbrown = "0.12"
paste = "1"

# Maybe?
# typescript-definitions = { git = "https://github.com/storyscript/typescript-definitions" }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }

rmp-serde = { version = "1", optional = true }
enum-primitive-derive = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }
crc32fast = { version = "1", optional = true }

url = { version = "2", optional = true }
thiserror = { version = "1", optional = true }
mime = { version = "0.3", optional = true }
headers = { version = "0.3", optional = true }
reqwest = { version = "0.11.9", optional = true, default_features = false, features = ["gzip", "deflate", "brotli"] }
http = { version = "0.2.6", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
form_urlencoded = { version = "1.0.1", optional = true }
arc-swap = { version = "1.5", optional = true }
base64 = { version = "0.13.0", optional = true }
tokio = { version = "1", optional = true, default_features = false, features = ["io-util"] }

tokio-tungstenite = { version = "0.17", optional = true, default_features = false, features = ["connect"] }
miniz_oxide = { version = "0.5", optional = true }
futures = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2.8", optional = true }

[features]
_internal_common = ["num-traits", "thiserror", "enum-primitive-derive"]

pg = ["postgres-types", "bytes"]
api = ["http", "_internal_common"] # required for Method

# Low-level command execution
driver = ["reqwest", "api", "serde_urlencoded", "form_urlencoded", "headers", "mime", "url", "base64"]

# High-level client library
client = ["driver", "arc-swap", "crc32fast", "tokio", "bytes"]
fs = ["tokio/fs"]

# Realtime gateway support
gateway = ["tokio-tungstenite", "miniz_oxide", "futures", "pin-project-lite", "_internal_common"]

framework = ["client", "gateway"]

# Efficient MessagePack Encoding
msgpack = ["rmp-serde"]

# Various TLS
native-tls = ["tokio-tungstenite/native-tls", "reqwest/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots", "reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots", "reqwest/rustls-tls-webpki-roots"]

default = ["api", "driver", "client", "gateway", "fs", "native-tls", "framework", "msgpack"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }