[package]
name = "client-sdk"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Lantern-chat/client-sdk-rs"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
smol_str = { git = "https://github.com/Lantern-chat/smol_str" }

[dependencies]
timestamp = { package = "iso8601-timestamp", version = "0.2" }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_shims = { version = "0.2", features = ["bitflags"] }
bitflags = "1.2"
serde_repr = "0.1"
enum-primitive-derive = "0.2"
num-traits = "0.2"
itoa = "1"
time = { version = "0.3", features = ["macros"] }
smol_str = { version = "0.1", features = ["serde"] }
arrayvec = { version = "0.7.1", features = ["serde"] }
paste = "1"
static_assertions = "1"
byteorder = "1.4"

schemars = { version = "0.8", optional = true }
okapi = { version = "0.7.0-rc.1", optional = true }
ahash = { version = "0.8", optional = true }

# Maybe?
# typescript-definitions = { git = "https://github.com/storyscript/typescript-definitions" }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.28.0", optional = true }

crc32fast = { version = "1", optional = true }
ciborium = { version = "0.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }

url = { version = "2", optional = true }
thiserror = { version = "1", optional = true }
mime = { version = "0.3", optional = true }
headers = { version = "0.3", optional = true }
reqwest = { version = "0.11.9", optional = true, default_features = false, features = ["gzip", "deflate"] }
http = { version = "0.2.6", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
form_urlencoded = { version = "1.0.1", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
arc-swap = { version = "1.5", optional = true }
base64 = { version = "0.21.0", optional = true }
tokio = { version = "1", optional = true, default_features = false, features = ["io-util"] }

tokio-tungstenite = { version = "0.18", optional = true, default_features = false, features = ["connect"] }
miniz_oxide = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2.8", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
_internal_common = ["thiserror"]

schema = ["schemars", "okapi", "timestamp/schema", "smol_str/schema"]

pg = ["postgres-types", "bytes", "timestamp/pg"]
rusqlite = ["dep:rusqlite", "timestamp/rusqlite"]
api = ["http", "_internal_common", "percent-encoding"] # http required for Method

# Low-level command execution
driver = ["reqwest", "api", "serde_urlencoded", "form_urlencoded", "headers", "mime", "url", "base64", "crc32fast", "bytes", "lazy_static"]

# High-level client library
client = ["driver", "arc-swap", "tokio"]
fs = ["tokio/fs"]

brotli = ["reqwest?/brotli"]

# Realtime gateway support
gateway = ["tokio-tungstenite", "miniz_oxide", "futures", "pin-project-lite", "_internal_common"]

framework = ["client", "gateway", "async-trait"]

# Efficient binary Encoding
cbor = ["ciborium"]

# Various TLS
native-tls = ["tokio-tungstenite/native-tls", "reqwest/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots", "reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots", "reqwest/rustls-tls-webpki-roots"]

default = ["schema", "api", "driver", "client", "gateway", "fs", "rustls-tls-native-roots", "framework", "cbor"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
