[package]
name = "client-sdk-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_shims = { version = "0.2", features = ["bitflags"] }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.29.0", optional = true }
rkyv = { version = "0.7", optional = true, default-features = false, features = ["size_32"] }

[features]
"pg" = ["postgres-types", "bytes"]
