[package]
name = "client-sdk-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
bitflags_serde_shim = { version = "0.2.5", default-features = false }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.31.0", optional = true }
rkyv = { version = "0.7", optional = true, default-features = false, features = ["validation"] }
rend = { version = "0.4", optional = true, default-features = false }

[features]
default = ["std"]
pg = ["postgres-types", "bytes"]
std = ["rkyv?/std"]
rkyv = ["dep:rkyv", "rend"]
